--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  ol li {
+    @apply list-decimal;
+  }
+
+  ul li {
+    @apply list-disc;
+  }
+}
