--- a/client/styles/App.css
+++ b/client/styles/App.css
@@ -32460,6 +32460,10 @@ html {
   color: var(--bg-primary) !important;
 }
 
+.st0 {
+  fill: var(--text-primary) !important;
+}
+
 @media (min-width: 640px) {
   .sm\:container {
     width: 100%;
