Update dependency versions

--- a/client/styles/App.css
+++ b/client/styles/App.css
@@ -12329,6 +12329,10 @@ ul li {
   line-height: 1;
 }
 
+.text-xxs {
+  font-size: .5rem;
+}
+
 .leading-3 {
   line-height: .75rem;
 }
@@ -44101,6 +44105,10 @@ html {
     line-height: 1;
   }
 
+  .sm\:text-xxs {
+    font-size: .5rem;
+  }
+
   .sm\:leading-3 {
     line-height: .75rem;
   }
@@ -75803,6 +75811,10 @@ html {
   .md\:text-9xl {
     font-size: 8rem;
     line-height: 1;
+  }
+
+  .md\:text-xxs {
+    font-size: .5rem;
   }
 
   .md\:leading-3 {
@@ -107509,6 +107521,10 @@ html {
     line-height: 1;
   }
 
+  .lg\:text-xxs {
+    font-size: .5rem;
+  }
+
   .lg\:leading-3 {
     line-height: .75rem;
   }
@@ -139213,6 +139229,10 @@ html {
     line-height: 1;
   }
 
+  .xl\:text-xxs {
+    font-size: .5rem;
+  }
+
   .xl\:leading-3 {
     line-height: .75rem;
   }
@@ -170915,6 +170935,10 @@ html {
   .\32xl\:text-9xl {
     font-size: 8rem;
     line-height: 1;
+  }
+
+  .\32xl\:text-xxs {
+    font-size: .5rem;
   }
 
   .\32xl\:leading-3 {
