--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -26,6 +26,7 @@ html {
 }
 
 .sp-layout {
+  flex-wrap: nowrap !important;
   height: 100% !important;
   border: 0px !important;
   border-radius: 0 !important;
