--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -26,10 +26,14 @@ html {
 }
 
 .sp-layout {
-  flex-wrap: nowrap !important;
   height: 100% !important;
   border: 0px !important;
   border-radius: 0 !important;
+}
+@media (min-width: 768px) {
+  .sp-layout {
+    flex-wrap: nowrap !important;
+  }
 }
 
 .sp-layout>:not(:first-child) {
