--- a/client/styles/App.css
+++ b/client/styles/App.css
@@ -32819,6 +32819,7 @@ ul li {
   animation: ping 0.5s linear infinite;
 }
 
+.md\:h-full-minus,
 .lg\:h-full-minus{
   height: calc(100% - 44px) !important;
 }
@@ -32830,6 +32831,10 @@ and does not update automatically
 
 html {
   background-color: var(--bg-primary);
+}
+
+html, body {
+  height: 100%;
 }
 
 .markdown-body {
@@ -32866,6 +32871,83 @@ html {
 
 .sp-stack {
   height: 100%;
+}
+
+/* Make clicks pass-through */
+
+#nprogress {
+  pointer-events: none;
+}
+
+#nprogress .bar {
+  background: var(--bg-nav);
+  position: fixed;
+  z-index: 1031;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 3px;
+}
+
+/* Fancy blur effect */
+
+#nprogress .peg {
+  display: block;
+  position: absolute;
+  right: 0px;
+  width: 100px;
+  height: 100%;
+  box-shadow: 0 0 10px var(--bg-nav), 0 0 5px var(--bg-nav);
+  opacity: 1.0;
+  transform: rotate(3deg) translate(0px, -4px);
+}
+
+/* Remove these to get rid of the spinner */
+
+#nprogress .spinner {
+  display: none;
+  position: fixed;
+  z-index: 1031;
+  top: 15px;
+  right: 15px;
+}
+
+#nprogress .spinner-icon {
+  width: 18px;
+  height: 18px;
+  box-sizing: border-box;
+  border: solid 2px transparent;
+  border-top-color: var(--bg-nav-offset);
+  border-left-color: var(--bg-nav-offset);
+  border-radius: 50%;
+  -webkit-animation: nprogress-spinner 400ms linear infinite;
+  animation: nprogress-spinner 400ms linear infinite;
+}
+
+.nprogress-custom-parent {
+  overflow: hidden;
+  position: relative;
+}
+
+.nprogress-custom-parent #nprogress .spinner,
+.nprogress-custom-parent #nprogress .bar {
+  position: absolute;
+}
+
+@-webkit-keyframes nprogress-spinner {
+  0%   { -webkit-transform: rotate(0deg);
+  }
+
+  100% { -webkit-transform: rotate(360deg);
+  }
+}
+
+@keyframes nprogress-spinner {
+  0%   { transform: rotate(0deg);
+  }
+
+  100% { transform: rotate(360deg);
+  }
 }
 
 @media (min-width: 640px) {
