--- a/client/styles/App.css
+++ b/client/styles/App.css
@@ -32909,7 +32909,7 @@ html, body {
   position: fixed;
   z-index: 1031;
   top: 50%;
-  right: 50%;
+  left: 50%;
   transform: translate(-50%, -50%);
 }
 
