--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -86,7 +86,7 @@ html, body {
   position: fixed;
   z-index: 1031;
   top: 50%;
-  right: 50%;
+  left: 50%;
   transform: translate(-50%, -50%);
 }
 
