--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -42,6 +42,7 @@ html, body {
 
 .sp-layout>:not(:first-child) {
   margin-top: 0px !important;
+  border: 0px !important;
 }
 
 .sp-stack {
@@ -86,7 +87,7 @@ html, body {
   position: fixed;
   z-index: 1031;
   top: 50%;
-  right: 50%;
+  left: 50%;
   transform: translate(-50%, -50%);
 }
 
