--- a/client/styles/App.css
+++ b/client/styles/App.css
@@ -33137,7 +33137,9 @@ html, body {
 
 .sp-layout>:not(:first-child) {
   margin-top: 0px !important;
-  border: 0px !important;
+  @media (min-width: 768px) {
+    border: 0px !important;
+  }
 }
 
 .sp-stack {
