--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -9,7 +9,8 @@ html {
   background-color: var(--bg-primary);
 }
 
-html, body {
+html,
+body {
   height: 100%;
 }
 
@@ -21,13 +22,13 @@ html, body {
   color: var(--bg-primary) !important;
 }
 
-.markdown-body {
-  overflow-x: auto;
-            white-space: pre-wrap;
-            white-space: -moz-pre-wrap;
-            white-space: -pre-wrap;
-            white-space: -o-pre-wrap;
-            word-wrap: break-word;
+.markdown-body > pre > code {
+  overflow-x: auto !important;
+  white-space: pre-wrap !important;
+  white-space: -moz-pre-wrap !important;
+  white-space: -pre-wrap !important;
+  white-space: -o-pre-wrap !important;
+  word-wrap: break-word !important;
 }
 
 .st0 {
@@ -47,12 +48,12 @@ html, body {
   .sp-layout {
     flex-wrap: nowrap !important;
   }
-  .sp-layout>:not(:first-child) {
+  .sp-layout > :not(:first-child) {
     border: 0px !important;
   }
 }
 
-.sp-layout>:not(:first-child) {
+.sp-layout > :not(:first-child) {
   margin-top: 0px !important;
   border-top-width: 0px !important;
   border-right-width: 0px !important;
@@ -87,11 +88,11 @@ html, body {
   width: 100px;
   height: 100%;
   box-shadow: 0 0 10px var(--bg-nav), 0 0 5px var(--bg-nav);
-  opacity: 1.0;
+  opacity: 1;
 
   -webkit-transform: rotate(3deg) translate(0px, -4px);
-      -ms-transform: rotate(3deg) translate(0px, -4px);
-          transform: rotate(3deg) translate(0px, -4px);
+  -ms-transform: rotate(3deg) translate(0px, -4px);
+  transform: rotate(3deg) translate(0px, -4px);
 }
 
 /* Remove these to get rid of the spinner */
@@ -115,7 +116,7 @@ html, body {
   border-radius: 50%;
 
   -webkit-animation: nprogress-spinner 400ms linear infinite;
-          animation: nprogress-spinner 400ms linear infinite;
+  animation: nprogress-spinner 400ms linear infinite;
 }
 
 .nprogress-custom-parent {
@@ -129,10 +130,18 @@ html, body {
 }
 
 @-webkit-keyframes nprogress-spinner {
-  0%   { -webkit-transform: rotate(0deg); }
-  100% { -webkit-transform: rotate(360deg); }
+  0% {
+    -webkit-transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+  }
 }
 @keyframes nprogress-spinner {
-  0%   { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
