--- a/client/styles/App.css
+++ b/client/styles/App.css
@@ -33159,6 +33159,10 @@ body {
   height: 100%;
 }
 
+.decorationsOverviewRuler {
+  display: none;
+}
+
 /* Make clicks pass-through */
 
 #nprogress {
