--- a/client/styles/fonts/icomoon/style.css
+++ b/client/styles/fonts/icomoon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?o68t21');
-  src:  url('fonts/icomoon.eot?o68t21#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?o68t21') format('truetype'),
-    url('fonts/icomoon.woff?o68t21') format('woff'),
-    url('fonts/icomoon.svg?o68t21#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?ugkdvn');
+  src:  url('fonts/icomoon.eot?ugkdvn#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?ugkdvn') format('truetype'),
+    url('fonts/icomoon.woff?ugkdvn') format('woff'),
+    url('fonts/icomoon.svg?ugkdvn#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,12 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-jest:before {
+  content: "\ea1d";
+}
+.icon-regexicon:before {
+  content: "\ea1c";
+}
 .icon-address:before {
   content: "\e900";
 }
@@ -877,9 +883,6 @@
 .icon-window:before {
   content: "\ea1b";
 }
-.icon-file-empty:before {
-  content: "\ea1c";
-}
-.icon-folder-open:before {
-  content: "\ea1d";
+.icon-terminal:before {
+  content: "\ea81";
 }
