--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -81,6 +81,7 @@ body {
 
 .sp-layout {
   display: flex;
+  position: relative;
   height: 100% !important;
   border: 0px !important;
   border-radius: 0 !important;
