--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -87,6 +87,7 @@ body {
 
 .sp-layout {
   display: flex;
+  flex-wrap: wrap;
   height: 100% !important;
   border: 0px !important;
   border-radius: 0 !important;
