class hint none important on mobile

--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -51,7 +51,7 @@ body {
 }
 @media (max-width: 768px) {
   [class*='hint--'] {
-    display: none;
+    display: none !important;
   }
 }
 /* hint css */
