Only hide after element

--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -51,7 +51,9 @@ body {
 }
 @media (max-width: 768px) {
   [class*='hint--'] {
-    display: none !important;
+    &:after {
+      display: none !important;
+    }
   }
 }
 /* hint css */
