--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -51,6 +51,9 @@ body {
 }
 @media (max-width: 768px) {
   [class*='hint--'] {
+    &:before {
+      display: none !important;
+    }
     &:after {
       display: none !important;
     }
