--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -6,11 +6,11 @@ and does not update automatically
 */
 
 html {
-  background-color: var(--bg-primary);
+  background-color: black;
 }
 
 html,
-body {
+body, #__next {
   height: 100%;
   scroll-behavior: smooth;
 }
@@ -90,43 +90,16 @@ body {
 /* markdown */
 
 /* sandpack */
-.st0 {
-  fill: var(--text-primary) !important;
-}
-
 .sp-wrapper {
   height: 100% !important;
 }
 
-.sp-layout {
-  display: flex;
-  flex-wrap: wrap;
-  height: 100% !important;
-  border: 0px !important;
-  border-radius: 0 !important;
-}
-@media (min-width: 768px) {
-  .sp-layout {
-    flex-wrap: nowrap !important;
-  }
-  .sp-layout > :not(:first-child) {
-    border: 0px !important;
-  }
-}
-
-.sp-layout > :not(:first-child) {
-  position: relative;
-  margin-top: 0px !important;
-  border-top-width: 0px !important;
-  border-right-width: 0px !important;
-}
-
 .sp-stack {
-  height: 100%;
+  height: 100% !important;
 }
 
-.decorationsOverviewRuler {
-  display: none;
+.sp-layout {
+  height: 100% !important;
 }
 /* sandpack */
 
