--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -89,23 +89,64 @@ body, #__next {
 }
 /* markdown */
 
-/* sandpack */
-.sp-wrapper {
+/* sandpack v2 */
+.v2 .sp-wrapper {
   height: 100% !important;
 }
 
-.sp-stack {
+.v2 .sp-stack {
   height: 100% !important;
 }
 
-.sp-layout {
+.v2 .sp-layout {
   height: 100% !important;
 }
 
 @media (max-width: 768px) {
-  .editor-instructions-container {
+  .v2 .editor-instructions-container {
     height: 60vh !important;
   }
+}
+/* sandpack v2 */
+
+/* sandpack */
+.st0 {
+  fill: var(--text-primary) !important;
+}
+
+.sp-wrapper {
+  height: 100% !important;
+}
+
+.sp-layout {
+  display: flex;
+  flex-wrap: wrap;
+  height: 100% !important;
+  border: 0px !important;
+  border-radius: 0 !important;
+}
+@media (min-width: 768px) {
+  .sp-layout {
+    flex-wrap: nowrap !important;
+  }
+  .sp-layout > :not(:first-child) {
+    border: 0px !important;
+  }
+}
+
+.sp-layout > :not(:first-child) {
+  position: relative;
+  margin-top: 0px !important;
+  border-top-width: 0px !important;
+  border-right-width: 0px !important;
+}
+
+.sp-stack {
+  height: 100%;
+}
+
+.decorationsOverviewRuler {
+  display: none;
 }
 /* sandpack */
 
