--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -19,6 +19,11 @@ body, #__next {
 .decorationsOverviewRuler {
   display: none !important;
 }
+.suggestion {
+  color: gray !important;
+  opacity: 0.7;
+  font-style: italic;
+}
 /* monaco */
 
 /* Circular progress bars */
