--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -21,7 +21,7 @@ body,
   display: none !important;
 }
 
-.hover-contents.code-hover-contents {
+.hover-contents {
   display: none !important;
 }
 
