Fix incorrect logs and scroll to bottom

--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -298,3 +298,6 @@ div[data-method='error'] ol[role='tree'] li {
   background: transparent !important;
 }
 
+.css-1wcpu1t, .css-1it6ff0 {
+  height: 22px !important;
+}
